--- a/health.html
+++ b/health.html
@@ -106,9 +106,7 @@
                 meditations, and professional articles.
               </p>
               <div class="button">
-                <a href="workouts.html" target="_blank" class="btn btn-1"
-                  >get started</a
-                >
+                <a href="#" class="btn btn-1">get started</a>
                 <a href="#" class="btn">Download</a>
               </div>
             </div>
@@ -119,12 +117,12 @@
     <!-- =====================Home section end=================== -->
     <!-- =========================feature section starts==================== -->
     <section class="feature">
-      <h1 class="heading">FITNESS <span>classess</span></h1>
+      <h1 class="heading">Men's <span>Health</span></h1>
       <div class="swiper feature-slider">
         <div class="swiper-wrapper">
           <div class="box">
             <div class="image">
-              <img src="/assets/feauture-classes (1).jpg" alt="" />
+              <img src="/assets/feauture-classes (1).jpg" id="men" alt="" />
             </div>
             <div class="content">
               <div class="price">NGN5,700</div>
@@ -178,7 +176,7 @@
     <!-- -============================schedule section starts===================== -->
 
     <section class="schedule">
-      <h1 class="heading"><span>our</span> schedule</h1>
+      <h1 class="heading"><span>Women's</span> Health</h1>
       <div class="box-container">
         <div class="box">
           <div class="content">
@@ -190,7 +188,7 @@
             </p>
           </div>
           <div class="icons">
-            <span><i class="bx bxs-time far fa-clock"></i>5:30pm</span>
+            <span> <i class="bx bxs-time far fa-clock"></i>5:30pm</span>
             <span
               ><i class="bx bxs-calendar fad fa calendar-alt"></i>April 22,
               2021</span
@@ -199,7 +197,7 @@
           <a href="#" class="btn">join form NGN15,000</a>
         </div>
         <div class="box">
-          <img src="/assets/Pic-1 (1).jpg" alt="" />
+          <img src="/assets/Pic-1 (1).jpg" id="wemen" alt="" />
         </div>
         <div class="box">
           <div class="content">
@@ -273,7 +271,7 @@
 
     <section class="trainers">
       <h1 class="heading">
-        Expert <span>Trainers</span>
+        Healthy <span>Foods</span>
         <div class="swiper trainer-slide">
           <div class="swiper-wrapper">
             <div class="swiper-slide box">
@@ -388,7 +386,7 @@
     <!-- ==========================Testimon section ends =========================== -->
     <!-- =============================blogs sectiong start========================== -->
     <section class="blogs">
-      <h1 class="heading">our <span>blogs</span></h1>
+      <h1 class="heading">Healthy <span>Blogs</span></h1>
       <div class="swiper blogs-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide box">
