--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Fitness21st [Choose Us, Choose Health]</title>
+    <title>Programs [Choose Us, Choose Health]</title>
   </head>
   <body>
     <!-- ======================header section starts========================= -->
@@ -106,9 +106,7 @@
                 meditations, and professional articles.
               </p>
               <div class="button">
-                <a href="workouts.html" target="_blank" class="btn btn-1"
-                  >get started</a
-                >
+                <a href="#" class="btn btn-1">get started</a>
                 <a href="#" class="btn">Download</a>
               </div>
             </div>
@@ -178,7 +176,7 @@
     <!-- -============================schedule section starts===================== -->
 
     <section class="schedule">
-      <h1 class="heading"><span>our</span> schedule</h1>
+      <h1 class="heading"><span>Weight Loss</span> Program</h1>
       <div class="box-container">
         <div class="box">
           <div class="content">
@@ -199,7 +197,7 @@
           <a href="#" class="btn">join form NGN15,000</a>
         </div>
         <div class="box">
-          <img src="/assets/Pic-1 (1).jpg" alt="" />
+          <img src="/assets/Pic-1 (1).jpg" id="loss" />
         </div>
         <div class="box">
           <div class="content">
@@ -273,12 +271,12 @@
 
     <section class="trainers">
       <h1 class="heading">
-        Expert <span>Trainers</span>
+        Strength Training <span>Programs</span>
         <div class="swiper trainer-slide">
           <div class="swiper-wrapper">
             <div class="swiper-slide box">
               <div class="image">
-                <img src="/assets/trainer (2).jpeg" alt="" />
+                <img src="/assets/trainer (2).jpeg" id="strenght" alt="" />
               </div>
               <div class="name">
                 <h1>AbdulRa'id</h1>
@@ -321,11 +319,11 @@
     <!-- ==========================Testimon section start=========================== -->
 
     <section class="testimonial">
-      <h1 class="heading">Testimonial</h1>
+      <h1 class="heading">HIIT</h1>
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img src="/assets/t (1).jpg" alt="" />
+            <img src="/assets/t (1).jpg" id="hiit" alt="" />
           </div>
           <div class="name">
             <h1>Khyle Hugg</h1>
@@ -388,12 +386,12 @@
     <!-- ==========================Testimon section ends =========================== -->
     <!-- =============================blogs sectiong start========================== -->
     <section class="blogs">
-      <h1 class="heading">our <span>blogs</span></h1>
+      <h1 class="heading">Self Defence <span>Progorams</span></h1>
       <div class="swiper blogs-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide box">
             <div class="image">
-              <img src="/assets/t (5).jpg" alt="" />
+              <img src="/assets/t (5).jpg" id="self" alt="" />
             </div>
             <div class="content">
               <h3>Fitness 21st class names here</h3>
@@ -489,12 +487,20 @@
         </div>
       </div>
     </section>
-    <!-- =============================blogs sectiong ends ========================== -->
+    <!-- ====================blogs sectiong ends ================== -->
+    <center>
+      <section class="see-more">
+        <div>
+          <p></p>
+          <a href="programspage.html">SEE MORE>></a>
+        </div>
+      </section>
+    </center>
     <!-- ===================footer section start==================== -->
     <section class="footer">
       <div class="box-container">
         <div class="box">
-          <h1>about</h1>
+          <h1>About</h1>
           <div class="text">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
@@ -536,6 +542,7 @@
         created by <span>coding ninja</span> || all right reserved
       </div>
     </section>
+
     <!-- ===================footer section Ends==================== -->
     <!-- ================swiper slide link================= -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
