--- a/programspage.html
+++ b/programspage.html
@@ -16,7 +16,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Fitness21st [Choose Us, Choose Health]</title>
+    <title>Programs [Choose Us, Choose Health]</title>
   </head>
   <body>
     <!-- ======================header section starts========================= -->
@@ -25,34 +25,12 @@
         Fit<span>ness</span>21<sup><span>st</span> </sup></a
       >
       <nav class="navbar">
-        <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li>
-            <a href="health.html">Health</a>
-            <div class="nav-bar1">
-              <ul>
-                <li><a href="health.html" id="#men">Men's Health</a></li>
-                <li><a href="health.html" id="#wemen">Wemen's Healths</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="nutrition.html">Services</a></li>
-          <li>
-            <a href="program.html">Programs</a>
-            <div class="nav-bar1">
-              <ul>
-                <li><a href="program.html" id="#loss">weight loss</a></li>
-                <li>
-                  <a href="program.html" id="#strenght">Strenght Training</a>
-                </li>
-                <li><a href="program.html" id="#hiit">HIIT</a></li>
-                <li><a href="program.html" id="#self">Self Defence</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="store.html">store</a></li>
-          <li><a href="workouts.html">Workouts </a></li>
-        </ul>
+        <a href="index.html" target="_blank">Home</a>
+        <a href="health.html" target="_blank">Health</a>
+        <a href="Nutrition.html" target="_blank">Services</a>
+        <a href="store.html" target="_blank">store</a>
+        <a href="workouts.html" target="_blank">Workouts </a>
+        <a href="program.html" target="_blank">Programs</a>
       </nav>
       <div class="icons">
         <a href="#" target="_blank" class="btn">Become a member</a>
@@ -106,9 +84,7 @@
                 meditations, and professional articles.
               </p>
               <div class="button">
-                <a href="workouts.html" target="_blank" class="btn btn-1"
-                  >get started</a
-                >
+                <a href="#" class="btn btn-1">get started</a>
                 <a href="#" class="btn">Download</a>
               </div>
             </div>
@@ -178,7 +154,7 @@
     <!-- -============================schedule section starts===================== -->
 
     <section class="schedule">
-      <h1 class="heading"><span>our</span> schedule</h1>
+      <h1 class="heading"><span>Weight Loss</span> Program</h1>
       <div class="box-container">
         <div class="box">
           <div class="content">
@@ -273,7 +249,7 @@
 
     <section class="trainers">
       <h1 class="heading">
-        Expert <span>Trainers</span>
+        Strength Training <span>Programs</span>
         <div class="swiper trainer-slide">
           <div class="swiper-wrapper">
             <div class="swiper-slide box">
@@ -321,7 +297,7 @@
     <!-- ==========================Testimon section start=========================== -->
 
     <section class="testimonial">
-      <h1 class="heading">Testimonial</h1>
+      <h1 class="heading">HIIT</h1>
       <div class="box-container">
         <div class="box">
           <div class="image">
@@ -388,7 +364,7 @@
     <!-- ==========================Testimon section ends =========================== -->
     <!-- =============================blogs sectiong start========================== -->
     <section class="blogs">
-      <h1 class="heading">our <span>blogs</span></h1>
+      <h1 class="heading">Self Defence <span>Progorams</span></h1>
       <div class="swiper blogs-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide box">
@@ -489,12 +465,13 @@
         </div>
       </div>
     </section>
-    <!-- =============================blogs sectiong ends ========================== -->
+    <!-- ====================blogs sectiong ends ================== -->
+
     <!-- ===================footer section start==================== -->
     <section class="footer">
       <div class="box-container">
         <div class="box">
-          <h1>about</h1>
+          <h1>About</h1>
           <div class="text">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
@@ -536,6 +513,7 @@
         created by <span>coding ninja</span> || all right reserved
       </div>
     </section>
+
     <!-- ===================footer section Ends==================== -->
     <!-- ================swiper slide link================= -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
