--- a/store.html
+++ b/store.html
@@ -25,37 +25,15 @@
         Fit<span>ness</span>21<sup><span>st</span> </sup></a
       >
       <nav class="navbar">
-        <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li>
-            <a href="health.html">Health</a>
-            <div class="nav-bar1">
-              <ul>
-                <li><a href="health.html" id="#men">Men's Health</a></li>
-                <li><a href="health.html" id="#wemen">Wemen's Healths</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="nutrition.html">Services</a></li>
-          <li>
-            <a href="program.html">Programs</a>
-            <div class="nav-bar1">
-              <ul>
-                <li><a href="program.html" id="#loss">weight loss</a></li>
-                <li>
-                  <a href="program.html" id="#strenght">Strenght Training</a>
-                </li>
-                <li><a href="program.html" id="#hiit">HIIT</a></li>
-                <li><a href="program.html" id="#self">Self Defence</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="store.html">store</a></li>
-          <li><a href="workouts.html">Workouts </a></li>
-        </ul>
+        <a href="index.html" target="_blank">Home</a>
+        <a href="health.html" target="_blank">Health</a>
+        <a href="services.html" target="_blank">Services</a>
+        <a href="store.html" target="_blank">store</a>
+        <a href="workouts.html" target="_blank">Workouts </a>
+        <a href="program.html" target="_blank">Programs</a>
       </nav>
       <div class="icons">
-        <a href="#" target="_blank" class="btn">Become a member</a>
+        <a href="#" target="_blank" class="btn">Beacome a member</a>
         <div id="menu-btn" class="bx bx-menu-alt-right fas fa-bars"></div>
       </div>
     </header>
@@ -106,9 +84,7 @@
                 meditations, and professional articles.
               </p>
               <div class="button">
-                <a href="workouts.html" target="_blank" class="btn btn-1"
-                  >get started</a
-                >
+                <a href="#" class="btn btn-1">get started</a>
                 <a href="#" class="btn">Download</a>
               </div>
             </div>
@@ -178,7 +154,7 @@
     <!-- -============================schedule section starts===================== -->
 
     <section class="schedule">
-      <h1 class="heading"><span>our</span> schedule</h1>
+      <h1 class="heading"><span> Store</span></h1>
       <div class="box-container">
         <div class="box">
           <div class="content">
@@ -388,7 +364,7 @@
     <!-- ==========================Testimon section ends =========================== -->
     <!-- =============================blogs sectiong start========================== -->
     <section class="blogs">
-      <h1 class="heading">our <span>blogs</span></h1>
+      <h1 class="heading">Store<span>Blogs</span></h1>
       <div class="swiper blogs-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide box">
